--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -209,8 +209,9 @@ main {
     max-width: 100%;
 }
 
-main.wide {
-    width: min(150ch, 100vw - 2rem);
+main.full-width {
+    width: 100%;
+    padding: 0 25px;
 }
 
 h1 {
