--- a/components/PostListing/PostListing.module.css
+++ b/components/PostListing/PostListing.module.css
@@ -18,6 +18,7 @@
 
 .excerpt {
     font-size: 1.4rem;
+    line-height: 2;
 }
 
 .tagList {
@@ -40,6 +41,11 @@
 .tagList li a {
     white-space: nowrap;
     font-size: 1.2rem;
+}
+
+.continueReading {
+    margin: 2rem 0 0;
+    font-size: 1.25rem;
 }
 
 @media (max-width: 414px) {
