--- a/components/ReadingLogListing/ReadingLogListing.module.css
+++ b/components/ReadingLogListing/ReadingLogListing.module.css
@@ -42,6 +42,11 @@
     font-size: 1.2rem;
 }
 
+.continueReading {
+    margin: 2rem 0 0;
+    font-size: 1.25rem;
+}
+
 @media (max-width: 414px) {
     .article h2 {
         font-size: 2.25rem;
