--- a/css/Stats.module.css
+++ b/css/Stats.module.css
@@ -1,6 +1,6 @@
 .statsSeparator {
     width: 250px;
-    margin: 40px auto;
+    margin: 2.5rem auto;
     border-bottom: 1px solid hsl(0, 0%, 87.1%);
     background-color: transparent;
 }
