--- a/components/PhotosetRow/PhotosetRow.module.css
+++ b/components/PhotosetRow/PhotosetRow.module.css
@@ -1,6 +1,8 @@
 .imageRow {
     display: flex;
     justify-content: space-between;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .imageRow button {
