--- a/css/Now.module.css
+++ b/css/Now.module.css
@@ -1,19 +1,19 @@
 .container h2 {
-    margin: 25px 0 20px;
+    margin: 1.25rem 0;
 }
 
 .lastUpdate {
-    margin: 12px 0;
+    margin: 0.75rem 0;
     font-style: italic;
 }
 
 .itemGrid {
-    margin: 0 0 40px;
+    margin: 0 0 2.5rem;
     padding: 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-column-gap: 10px;
-    grid-row-gap: 20px;
+    grid-column-gap: 0.75rem;
+    grid-row-gap: 1.25rem;
     align-items: start;
     justify-items: center;
 }
@@ -21,13 +21,13 @@
 @media all and (max-width: 767px) {
     .container h1 {
         font-size: 1.8rem;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
     }
 
     .container p {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
     }
 
     .itemGrid {
