--- a/css/Search.module.css
+++ b/css/Search.module.css
@@ -1,7 +1,7 @@
 .searchContainer {
     display: flex;
     justify-content: center;
-    margin: 25px 0;
+    margin: 1.5rem 0;
 }
 
 .searchHeader {
