--- a/css/Uses.module.css
+++ b/css/Uses.module.css
@@ -3,17 +3,17 @@
 }
 
 .vscodePlugins {
-    margin: 0 0 30px 0;
+    margin: 0 0 2rem 0;
     list-style-type: none;
 }
 
 .vscodePlugins li {
-    margin: 5px 0;
+    margin: 0.5rem 0;
 }
 
 @media all and (max-width: 600px) {
     .container {
-        margin: 10px 0;
+        margin: 0.75rem 0;
     }
 
     .vscodePlugins {
