--- a/css/VideoGames.module.css
+++ b/css/VideoGames.module.css
@@ -3,21 +3,21 @@
 }
 
 .container h2 {
-    margin: 25px 0 20px;
+    margin: 1.5rem 0;
 }
 
 .lastUpdate {
-    margin: 12px 0;
+    margin: 1rem 0;
     font-style: italic;
 }
 
 .items {
-    margin: 0 0 40px;
+    margin: 0 0 2.5rem;
     padding: 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-column-gap: 10px;
-    grid-row-gap: 40px;
+    grid-column-gap: 0.75rem;
+    grid-row-gap: 2.5rem;
     justify-items: center;
 }
 
@@ -34,18 +34,18 @@
 @media all and (max-width: 767px) {
     .container {
         width: 100%;
-        margin: 25px 0;
+        margin: 1.5rem 0;
     }
 
     .container h1 {
         font-size: 1.8rem;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
     }
 
     .container p {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
     }
 
     .items {
