Updated Content & Added April Check-In
## New Post

- April Check-In

## Updated Content

- Bookshelf
- Now
- Movies
- TV
- 2023 Progress

--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -504,6 +504,7 @@ a img {
 .article .content ul li,
 .article .content ol li {
     padding-left: 12px;
+    margin-bottom: 1rem;
 }
 
 .article .content.reading-log blockquote {
