--- a/css/Bookshelf.module.css
+++ b/css/Bookshelf.module.css
@@ -25,13 +25,13 @@
     margin-top: 2rem;
 }
 
-@media all and (max-width: 900px) {
+@media (max-width: 900px) {
     .container {
         width: 600px;
     }
 }
 
-@media all and (max-width: 767px) {
+@media (max-width: 767px) {
     .container {
         width: 100%;
         margin: 1.5rem 0;
