Changed Now Page to Uses Notion
Changed the now page to pull from Notion

Closes #445

--- a/css/Now.module.css
+++ b/css/Now.module.css
@@ -1,24 +1,42 @@
+.container {
+    margin: 3.2rem auto 2rem auto;
+}
+
 .container h2 {
-    margin: 1.25rem 0;
+    margin: 1.5rem 0;
 }
 
 .lastUpdate {
-    margin: 0.75rem 0;
+    margin: 1rem 0;
     font-style: italic;
 }
 
-.itemGrid {
+.items {
     margin: 0 0 2.5rem;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-column-gap: 0.75rem;
-    grid-row-gap: 1.25rem;
-    align-items: start;
+    grid-row-gap: 2.5rem;
     justify-items: center;
 }
 
+.paddedTop {
+    margin-top: 2rem;
+}
+
+@media all and (max-width: 900px) {
+    .container {
+        width: 600px;
+    }
+}
+
 @media all and (max-width: 767px) {
+    .container {
+        width: 100%;
+        margin: 1.5rem 0;
+    }
+
     .container h1 {
         font-size: 1.8rem;
         padding-left: 0.75rem;
@@ -30,7 +48,7 @@
         padding-right: 0.75rem;
     }
 
-    .itemGrid {
+    .items {
         display: block;
     }
 }
