--- a/css/Tv.module.css
+++ b/css/Tv.module.css
@@ -21,6 +21,10 @@
     justify-items: center;
 }
 
+.paddedTop {
+    margin-top: 2rem;
+}
+
 @media all and (max-width: 900px) {
     .container {
         width: 600px;
