--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -526,6 +526,14 @@ a img {
     font-size: 1.85rem;
 }
 
+.article .content.reading-log h4 {
+    color: var(--primary-color-1);
+}
+
+.article .content.reading-log h2:nth-of-type(2) {
+    margin-top: 5rem;
+}
+
 .contact ul {
     text-align: center;
     font-size: 1.3rem;
