--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -351,6 +351,13 @@ a img {
     margin: 20px 0;
 }
 
+.article h2.subheading {
+    margin: 0;
+    color: var(--text);
+    font-size: 1.45rem;
+    font-style: italic;
+}
+
 .article h3 {
     margin: 20px 0;
 }
