Added Progress Bar & Notion Cleanup
- Added a progress bar so when clicking on a link with Notion retrieval, it looks like something is happeneing
- Cleaned up the Notion fetch process

Closes #467

--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -215,6 +215,15 @@ main.full-width {
     padding: 0 25px;
 }
 
+#nprogress .bar {
+    background-color: var(--primary-color-1);
+    height: 0.6rem;
+}
+
+#nprogress .peg {
+    box-shadow: none;
+}
+
 .cover {
     width: 100%;
     height: 500px;
