--- a/components/StarIcon/StarIcon.module.css
+++ b/components/StarIcon/StarIcon.module.css
@@ -1,5 +1,17 @@
 .star {
     display: inline-block;
     fill: var(--primary-color-1);
+    stroke: var(--primary-color-1);
     margin: 0 0.25rem;
+    width: 1.25rem;
+    height: 1.25rem;
+}
+
+.emptyStar {
+    display: inline-block;
+    fill: none;
+    stroke: var(--primary-color-1);
+    margin: 0 0.25rem;
+    width: 1.25rem;
+    height: 1.25rem;
 }
