--- a/components/BookListing/BookListing.module.css
+++ b/components/BookListing/BookListing.module.css
@@ -5,7 +5,7 @@
     line-height: 1.3;
 }
 
-.item a {
+.externalLink {
     font-size: 1.25rem;
 }
 
@@ -28,6 +28,10 @@
 
 .viewThoughts {
     margin: 8px 0;
+    font-size: 1.05rem;
+}
+
+.notes {
     font-size: 1.05rem;
 }
 
