--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -23,6 +23,7 @@
     --primary-color-green: hsl(144, 100%, 15%);
     --primary-color-blue: rgb(28, 55, 189);
     --primary-color-purple: hsl(301, 91%, 40%);
+    --tag-text-color: hsl(0, 0%, 100%);
 }
 
 [data-theme*='dark'] {
@@ -41,6 +42,7 @@
     --primary-color-green: hsl(124, 95%, 38%);
     --primary-color-blue: hsl(213 100% 66%);
     --primary-color-purple: hsl(301, 99%, 65%);
+    --tag-text-color: hsl(0, 0%, 100%);
 }
 
 [data-theme*='light'] {
@@ -79,12 +81,14 @@
     --primary-color-1: hsl(144, 100%, 15%);
     --primary-color-2: hsl(142, 68%, 29%);
     --primary-color-3: hsl(124, 95%, 32%);
+    --tag-text-color: hsl(0, 0%, 9%);
 }
 
 [data-color-theme*='purple'] {
     --primary-color-1: hsl(301, 91%, 40%);
     --primary-color-2: hsl(301, 77%, 46%);
     --primary-color-3: hsl(298, 100%, 36%);
+    --tag-text-color: hsl(0, 0%, 9%);
 }
 
 [data-theme*='dark'][data-color-theme*='purple'] {
@@ -97,6 +101,7 @@
     --primary-color-1: hsl(230, 74%, 43%);
     --primary-color-2: hsl(230, 66%, 48%);
     --primary-color-3: hsl(223, 69%, 43%);
+    --tag-text-color: hsl(0, 0%, 9%);
 }
 
 [data-theme*='dark'][data-color-theme*='blue'] {
@@ -109,6 +114,7 @@
     --primary-color-1: hsl(30, 100%, 33%);
     --primary-color-2: hsl(33, 89%, 40%);
     --primary-color-3: hsl(17, 95%, 60%);
+    --tag-text-color: hsl(0, 0%, 9%);
 }
 
 [data-theme*='dark'][data-color-theme*='orange'] {
@@ -121,6 +127,7 @@
     --primary-color-1: hsl(0, 72%, 48%);
     --primary-color-2: hsl(0, 77%, 51%);
     --primary-color-3: hsl(0, 65%, 24%);
+    --tag-text-color: hsl(0, 0%, 9%);
 }
 
 [data-theme*='dark'][data-color-theme*='red'] {
@@ -235,6 +242,13 @@ main.full-width {
 .cover.about {
     background-image: url('/images/covers/about.jpg');
     background-position: 50% 35%;
+}
+
+hr {
+    width: 250px;
+    margin: 40px auto;
+    border-bottom: 1px solid hsl(0, 0%, 87.1%);
+    background-color: transparent;
 }
 
 h1 {
@@ -453,13 +467,6 @@ a img {
     margin-bottom: 25px;
 }
 
-.article hr {
-    width: 250px;
-    margin: 40px auto;
-    border-bottom: 1px solid hsl(0, 0%, 87.1%);
-    background-color: transparent;
-}
-
 .article div.centered-image {
     text-align: center;
     margin: 30px 0;
@@ -582,6 +589,11 @@ ul.likes li div.title {
 
 ul.likes li div.source {
     color: var(--meta);
+}
+
+article.book-notes blockquote {
+    border-left: 8px solid var(--primary-color-2);
+    padding-left: 1.5rem;
 }
 
 @media all and (max-width: 1280px) {
