--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,36 +1,6 @@
 @font-face {
-    font-family: 'WorkSans';
-    src: url('/fonts/work_sans/WorkSans-VariableFont_wght.ttf') format('truetype');
-    font-weight: 100 900;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'WorkSans';
-    src: url('/fonts/work_sans/WorkSans-Italic-VariableFont_wght.ttf') format('truetype');
-    font-weight: 100 900;
-    font-display: swap;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'Petrona';
-    src: url('/fonts/petrona/Petrona.ttf') format('truetype');
-    font-weight: 200 900;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Petrona';
-    src: url('/fonts/petrona/PetronaItalic.ttf') format('truetype');
-    font-weight: 200 900;
-    font-display: swap;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: 'SourceCodePro';
-    src: url('/fonts/source_code_pro/SourceCodePro.ttf') format('truetype');
+    font-family: 'inconsolata';
+    src: url('/fonts/inconsolata/inconsolata.ttf') format('truetype');
     font-weight: 200 900;
     font-display: swap;
 }
@@ -40,6 +10,13 @@
     src: url('/fonts/source_code_pro/SourceCodeProItalic.ttf') format('truetype');
     font-weight: 200 900;
     font-style: italic;
+}
+
+@font-face {
+    font-family: 'SourceCodePro';
+    src: url('/fonts/source_code_pro/SourceCodePro.ttf') format('truetype');
+    font-weight: 200 900;
+    font-display: swap;
 }
 
 @font-face {
