Updated the Layout to Include a Sidebar

--- a/components/RssFeedButton/RssFeedButton.module.css
+++ b/components/RssFeedButton/RssFeedButton.module.css
@@ -7,11 +7,5 @@
 }
 
 .rss svg path {
-    fill: var(--primary-color-2)
-}
-
-@media (max-width: 767px) {
-    .rss {
-        display: none;
-    }
+    fill: var(--primary-color-2);
 }
