--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,77 +1,31 @@
 .header {
     height: 60px;
-    display: flex;
-    justify-content: space-between;
-    padding: 15px;
-}
-
-.container {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 2rem;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.logo img {
-    height: 36px;
-    width: 36px;
-}
-
-.logo a {
-    font-size: 1.5rem;
-    line-height: 36px;
-}
-
-.logo a:hover {
-    text-decoration: none;
-}
-
-.nav {
-    margin-left: 2rem;
-    font-size: 1.2rem;
-}
-
-.nav a {
-    padding-right: 1.5rem;
-}
-
-.config {
+    padding-right: 1rem;
+    background: var(--sidebar);
     display: flex;
     justify-content: flex-end;
-    align-items: center;
-    gap: 1rem;
+    column-gap: 1rem;
+    width: calc(100% - 350px);
+    right: 0;
+    position: fixed;
 }
 
-.mobileNav {
-    display: none;
-    margin: 1rem;
-    font-size: 1.1rem;
-    text-align: center;
-}
-
-.mobileNav a {
-    display: inline-block;
-    margin: 0rem 1.5rem 1rem;
-}
-
-@media (max-width: 880px) {
-    .nav {
-        display: none;
-    }
-
-    .mobileNav {
-        display: block;
+@media (max-width: 1000px) {
+    .header {
+        position: absolute;
+        width: auto;
+        right: 0;
+        top: 0;
+        z-index: 10;
+        background-color: transparent;
     }
 }
 
-@media (max-width: 475px) {
-    .logo img {
-        display: none;
+@media (max-width: 600px) {
+    .header {
+        position: relative;
+        width: 100%;
+        height: auto;
+        padding: 1rem 1rem 0 0;
     }
 }
