--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -186,10 +186,6 @@ a img {
     border: none;
 }
 
-.about h1 {
-    margin: 0.75rem 0 1.5rem;
-}
-
 .twitter-tweet-rendered {
     margin: 30px auto !important;
 }
@@ -508,6 +504,7 @@ button[data-color='purple'] {
 @media (max-width: 1000px) {
     main {
         margin: 0;
+        padding-top: 0;
     }
 
     .page-content {
