--- a/components/ReadingLogListing/ReadingLogListing.module.css
+++ b/components/ReadingLogListing/ReadingLogListing.module.css
@@ -4,6 +4,14 @@
     border: 1px solid var(--grey-1);
 }
 
+.article:hover {
+    border-color: var(--primary-color-1);
+}
+
+.article:hover .metadata {
+    border-color: var(--primary-color-1);
+}
+
 .article h2 {
     font-size: 2.25rem;
     line-height: 1.1;
