--- a/components/PostListing/PostListing.module.css
+++ b/components/PostListing/PostListing.module.css
@@ -1,19 +1,34 @@
 .article {
     margin: 0 0 5rem 0;
+    box-shadow: var(--box-shadow);
+    border: 1px solid var(--grey-1);
+}
+
+.article:hover {
+    border-color: var(--primary-color-1);
+}
+
+.article:hover .metadata {
+    border-color: var(--primary-color-1);
 }
 
 .article h2 {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     line-height: 1.1;
+    margin-bottom: 2rem;
 }
 
 .metadata {
-    display: flex;
-    justify-content: flex-start;
-    gap: 1rem;
     text-transform: uppercase;
     font-style: italic;
-    margin: 1.5rem 0 2rem;
+    padding: 0.5rem 2rem;
+    border-bottom: 1px solid var(--grey-1);
+    display: flex;
+    column-gap: 1rem;
+}
+
+.content {
+    padding: 2rem;
 }
 
 .excerpt {
