--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -1,5 +1,6 @@
 :root {
     --background: hsl(0, 0%, 100%);
+    --background-lighter: hsl(0, 0%, 80%);
     --text: hsl(0, 0%, 15%);
     --white-1: hsl(0, 0%, 100%);
     --white-2: hsl(0, 0%, 90%);
@@ -28,6 +29,7 @@
 
 [data-theme*='dark'] {
     --background: hsl(0, 0%, 14%);
+    --background-lighter: hsl(0, 0%, 25%);
     --text: hsl(0, 0%, 94%);
     --primary-color-1: hsl(124, 95%, 38%);
     --primary-color-2: hsl(124, 100%, 40%);
@@ -47,6 +49,7 @@
 
 [data-theme*='light'] {
     --background: hsl(0, 0%, 100%);
+    --background-lighter: hsl(0, 0%, 80%);
     --text: hsl(0, 0%, 15%);
     --white-1: hsl(0, 0%, 100%);
     --white-2: hsl(0, 0%, 90%);
@@ -217,6 +220,10 @@ main {
     max-width: 100%;
 }
 
+main.slim {
+    width: min(80ch, 100vw - 2rem);
+}
+
 main.full-width {
     width: 100%;
     padding: 0 25px;
@@ -354,13 +361,17 @@ a img {
 
 .pagination .paginate-next-a,
 .pagination .paginate-prev-a {
-    color: var(--primary-color-1);
+    color: var(--text);
+    border: 1px solid var(--text);
+    padding: 0.5rem 1rem;
     margin: 0 0.1rem;
 }
 
 .pagination .paginate-next-a:hover,
 .pagination .paginate-prev-a:hover {
-    color: var(--primary-color-2);
+    color: var(--primary-color-1);
+    border-color: var(--primary-color-1);
+    text-decoration: none;
 }
 
 .pagination .break {
