Continued work on design

--- a/components/PostListing/PostListing.module.css
+++ b/components/PostListing/PostListing.module.css
@@ -28,6 +28,12 @@
     padding: 0.5rem 2rem;
     border-bottom: 1px solid var(--grey-1);
     background-color: var(--background-lighter);
+    display: flex;
+    column-gap: 1rem;
+}
+
+.readTime {
+    text-transform: none;
 }
 
 .excerpt {
