--- a/components/PostListing/PostListing.module.css
+++ b/components/PostListing/PostListing.module.css
@@ -25,15 +25,11 @@
 .metadata {
     text-transform: uppercase;
     font-style: italic;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1rem;
     border-bottom: 1px solid var(--grey-1);
     background-color: var(--background-lighter);
     display: flex;
     column-gap: 1rem;
-}
-
-.readTime {
-    text-transform: none;
 }
 
 .excerpt {
@@ -63,14 +59,25 @@
     font-size: 1.2rem;
 }
 
-.continueReading {
-    margin: 2rem 0 0;
-    font-size: 1.25rem;
+.mobileVersion {
+    display: none;
 }
 
-@media (max-width: 414px) {
+.desktopVersion {
+    display: flex;
+}
+
+@media (max-width: 450px) {
     .article h2 {
         font-size: 2.25rem;
         margin-bottom: 1rem;
+    }
+
+    .mobileVersion {
+        display: flex;
+    }
+
+    .desktopVersion {
+        display: none;
     }
 }
