--- a/components/BookMetadata/BookMetadata.module.css
+++ b/components/BookMetadata/BookMetadata.module.css
@@ -1,7 +1,10 @@
 .metadata {
-    margin: 2rem 0;
     display: flex;
-    gap: 4rem;
+    gap: 2.5rem;
+}
+
+.metadata h2 {
+    font-size: 2.1rem;
 }
 
 .image {
@@ -11,6 +14,7 @@
 
 .metadata h3 {
     color: var(--text);
+    font-size: 1.75rem;
     margin-bottom: 0.6rem;
 }
 
