--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -214,14 +214,10 @@ body {
 }
 
 main {
-    width: min(100ch, 100vw - 2rem);
+    width: min(80ch, 100vw - 2rem);
     margin: 0 auto;
     padding: 0 10px;
     max-width: 100%;
-}
-
-main.slim {
-    width: min(80ch, 100vw - 2rem);
 }
 
 main.full-width {
@@ -269,7 +265,7 @@ h1 {
 h2 {
     font-weight: 400;
     font-size: 2.999rem;
-    color: var(--primary-color-3);
+    color: var(--primary-color-1);
     margin: 0;
     padding: 0;
 }
@@ -352,6 +348,7 @@ a img {
 .pagination {
     text-align: center;
     list-style: none;
+    margin-top: 4rem;
 }
 
 .pagination li {
@@ -390,12 +387,45 @@ a img {
     white-space: nowrap;
 }
 
+.article {
+    margin: 3rem 0;
+    box-shadow: var(--box-shadow);
+    border: 1px solid var(--grey-1);
+}
+
+.article:hover {
+    border-color: var(--primary-color-1);
+}
+
+.article:hover .metadata,
+.article:hover .tags {
+    border-color: var(--primary-color-1);
+}
+
+.article .metadata {
+    text-transform: uppercase;
+    font-style: italic;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid var(--grey-1);
+    background-color: var(--background-lighter);
+    display: flex;
+    column-gap: 1rem;
+}
+
+.article .tags {
+    margin-top: 1.5rem;
+    padding: 0.5rem 1rem;
+    border-top: 1px solid var(--grey-1);
+}
+
 .article h1 {
-    margin: 0;
+    margin: 0 0 1.5rem;
+    font-size: 2.5rem;
 }
 
 .article h2 {
-    margin: 20px 0;
+    font-size: 2.25rem;
+    margin: 1.25px 0;
 }
 
 .article h2.subheading {
@@ -406,6 +436,7 @@ a img {
 }
 
 .article h3 {
+    font-size: 2rem;
     margin: 20px 0;
 }
 
@@ -420,75 +451,30 @@ a img {
     font-weight: normal;
 }
 
-.article .metadata {
-    margin: 0.2rem 0 1.25rem 0;
-    font-style: italic;
-    font-size: 1.2rem;
-    color: var(--meta);
-    font-weight: 300;
-    display: flex;
-    align-items: center;
-}
-
-.article .metadata .separator {
-    display: inline-block;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.article .metadata .separator::before {
-    content: ' | ';
+.article .content {
+    padding: 1rem 2rem;
 }
 
 .primary-color {
     color: var(--primary-color-1);
 }
 
-@media screen and (max-width: 425px) {
-    .article .metadata {
-        display: block;
+.article .metadata .mobile-version {
+    display: none;
+}
+
+.article .metadata .desktop-version {
+    display: flex;
+}
+
+@media screen and (max-width: 450px) {
+    .article .metadata .mobile-version {
+        display: flex;
     }
 
-    .article .metadata .read-time {
-        display: block;
-        margin-top: 0.5rem;
-    }
-
-    .article .metadata .separator {
+    .article .metadata .desktop-version {
         display: none;
     }
-}
-
-.article .metadata svg {
-    display: inline-block;
-    margin-right: 1rem;
-}
-
-.article .metadata svg path {
-    fill: var(--meta);
-}
-
-.article blockquote {
-    border-left: 8px solid var(--primary-color-2);
-    padding-left: 40px;
-    margin: 30px 0;
-}
-
-.article blockquote p {
-    font-size: 2rem;
-    font-style: italic;
-    color: var(--primary-color-1);
-}
-
-.article blockquote.small {
-    border-left: none;
-    padding-left: 20px;
-    margin: 15px 0;
-    font-size: 1.7rem;
-    line-height: 1.75;
-    font-style: italic;
-    color: var(--primary-color-1);
-    margin-bottom: 25px;
 }
 
 .article div.centered-image {
@@ -519,15 +505,6 @@ a img {
     margin: 25px 40px;
 }
 
-.article p {
-    font-size: 1.5rem;
-    font-weight: 300;
-}
-
-.article p code {
-    font-size: 1.5rem;
-}
-
 .article p a {
     text-decoration: underline;
     text-underline-offset: 0.33rem;
@@ -545,32 +522,37 @@ a img {
 
 .article .content ul,
 .article .content ol {
-    font-size: 1.5rem;
-    font-weight: 300;
     margin: 0 25px 40px 25px;
 }
 
 .article .content ul li,
 .article .content ol li {
-    padding-left: 12px;
-    margin-bottom: 1rem;
+    padding-left: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
-.article .content.reading-log blockquote,
-.article .content.reading-log blockquote p {
+.article blockquote,
+.article blockquote p {
     border-left: none;
-    padding-left: 20px;
-    margin: 15px 0;
-    font-size: 1.7rem;
+    padding: 0 0.5rem;
+    margin: 0 0 2rem;
+    font-size: 1.4rem;
     line-height: 1.75;
     font-style: italic;
     color: var(--primary-color-2);
-    margin-bottom: 25px;
+}
+
+.article .content.reading-log h1 {
+    font-size: 2rem;
+}
+
+.article .content.reading-log h2 {
+    font-size: 1.75rem;
 }
 
 .article .content.reading-log h3 {
     color: var(--text);
-    font-size: 1.85rem;
+    font-size: 1.5rem;
 }
 
 .article .content.reading-log h4 {
@@ -615,11 +597,45 @@ ul.likes li div.source {
     color: var(--meta);
 }
 
-article.book-notes blockquote {
-    border-left: 8px solid var(--primary-color-2);
-    padding-left: 1.5rem;
+article.book-note {
+    margin: 3rem 0;
+    box-shadow: var(--box-shadow);
+    border: 1px solid var(--grey-1);
 }
 
+article.book-note:hover {
+    border-color: var(--primary-color-1);
+}
+
+article.book-note:hover .metadata,
+article.book-note:hover .tags {
+    border-color: var(--primary-color-1);
+}
+
+article.book-note .metadata {
+    text-transform: uppercase;
+    font-style: italic;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid var(--grey-1);
+    background-color: var(--background-lighter);
+    display: flex;
+    column-gap: 1rem;
+}
+
+article.book-note .content {
+    padding: 1rem;
+}
+
+article.book-note blockquote,
+article.book-note blockquote p {
+    border-left: none;
+    padding: 0 0.5rem;
+    margin: 0 0 2rem;
+    font-size: 1.4rem;
+    line-height: 1.75;
+    font-style: italic;
+    color: var(--primary-color-2);
+}
 @media all and (max-width: 1280px) {
     .article pre {
         margin: 15px 5px;
