--- a/components/LatestPosts/LatestPosts.module.css
+++ b/components/LatestPosts/LatestPosts.module.css
@@ -29,21 +29,39 @@
 .metadata {
     text-transform: uppercase;
     font-style: italic;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1rem;
     border-bottom: 1px solid var(--grey-1);
     background-color: var(--background-lighter);
+    display: flex;
+    column-gap: 1rem;
 }
 
 .excerpt {
     font-size: 1.4rem;
 }
 
+.mobileVersion {
+    display: none;
+}
+
+.desktopVersion {
+    display: flex;
+}
+
 @media (max-width: 450px) {
     .metadata {
-        text-align: center;
+        justify-content: center;
     }
 
     .article h2 {
         margin-bottom: 1rem;
+    }
+
+    .desktopVersion {
+        display: none;
+    }
+
+    .mobileVersion {
+        display: flex;
     }
 }
