--- a/components/ReadingLogListing/ReadingLogListing.module.css
+++ b/components/ReadingLogListing/ReadingLogListing.module.css
@@ -61,9 +61,13 @@
     font-size: 1.25rem;
 }
 
-@media (max-width: 414px) {
+@media (max-width: 450px) {
     .article h2 {
         font-size: 2.25rem;
         margin-bottom: 1rem;
+    }
+
+    .metadata {
+        text-align: center;
     }
 }
