--- a/components/BookNoteListing/BookNoteListing.module.css
+++ b/components/BookNoteListing/BookNoteListing.module.css
@@ -8,6 +8,10 @@
     border-color: var(--primary-color-1);
 }
 
+.bookNote:hover .metadata {
+    border-color: var(--primary-color-1);
+}
+
 .metadata {
     text-transform: uppercase;
     font-style: italic;
