--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -537,6 +537,7 @@ a img {
 .article .content ol li {
     padding-left: 0.5rem;
     margin-bottom: 0.5rem;
+    font-size: 1.2rem;
 }
 
 .article blockquote,
