--- a/styles/kpwags.css
+++ b/styles/kpwags.css
@@ -530,7 +530,7 @@ a img {
 
 .article .content ul,
 .article .content ol {
-    margin: 0 25px 40px 25px;
+    margin: 1rem 1.5rem 2.5rem 1.5rem;
 }
 
 .article .content ul li,
