--- a/components/ThemeSwitcher/ThemeSwitcher.module.css
+++ b/components/ThemeSwitcher/ThemeSwitcher.module.css
@@ -1,22 +1,36 @@
-.bar {
+.themeSelector {
     text-align: center;
-    margin: 1rem 2rem;
+    width: var(--width);
+    margin: 16px auto;
+    padding: 16px 32px;
+    border: 1px solid var(--primary-color-1);
+    box-shadow: var(--box-shadow);
+    position: relative;
 }
 
-.bar h3 {
-    margin-bottom: 0.75rem;
+.themeSelector h3 {
+    font-size: 1.75rem;
+    margin-bottom: 8px;
+    line-height: 1;
 }
 
-.colorButtons {
+.buttonRow {
     display: flex;
     gap: 1rem;
     justify-content: center;
+    align-items: center;
+    margin-bottom: 12px;
+}
+
+.bottomButtonRow {
+    margin-bottom: 0;
 }
 
 .themeColor {
     border-style: solid;
     cursor: pointer;
     width: 100px;
+    padding: 5px 0;
 }
 
 .themeColor.red {
@@ -42,4 +56,66 @@
 .themeColor.purple {
     border-color: var(--primary-color-purple);
     background: var(--primary-color-purple);
+}
+
+.buttonContainer {
+    font-size: 0.8rem;
+}
+
+.buttonContainer button {
+    display: block;
+}
+
+.closeButton {
+    background: transparent;
+    border: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5px;
+    top: 5px;
+    z-index: 100;
+    stroke: var(--text);
+}
+
+.svgButton {
+    display: block;
+    border-style: solid;
+    cursor: pointer;
+    padding: 5px 35px;
+    text-align: center;
+    stroke: var(--black-2);
+}
+
+.buttonContainer:hover {
+    color: var(--primary-color-1);
+}
+
+.buttonContainer:hover button {
+    border-color: var(--primary-color-1);
+    stroke: var(--primary-color-1);
+}
+
+.closeButton svg,
+.svgButton svg {
+    width: 24px;
+    height: 24px;
+}
+
+
+@media (max-width: 625px) {
+    /* .themeSelector {
+        width: calc(100vw - 2rem);
+    } */
+
+    .themeSelector h3 {
+        font-size: 1.5rem;
+    }
+
+    .themeColor {
+        width: calc((100vw - 2rem) / 8);
+    }
+
+    .svgButton {
+        width: calc((100vw - 2rem) / 4);
+    }
 }
