--- a/css/Goals.module.css
+++ b/css/Goals.module.css
@@ -31,6 +31,7 @@
 @media all and (max-width: 850px) {
     .container {
         width: 100%;
-        margin: 1.5rem 0;
+        margin: 24px 0;
+        padding: 0 8px;
     }
 }
